# 2dx-input-overlay

./: .gitignore  CMakeLists.txt  DEVICE_INFO_TEMPLATE.md  DO_TODO_LIST.md  README.md  SPICE2X_INTEGRATION_NOTES.md  hid_input_backend.cpp  hid_input_backend.h  main.cpp  my_hid_adapter.cpp  my_hid_adapter.h  run_build.cmd
obs-plugintemplate/: CMakeLists.txt  CMakePresets.json  buildspec.json
obs-plugintemplate/data/locale/: en-US.ini
obs-plugintemplate/src/: hid-backend-bridge.cpp  hid-backend-bridge.h  input-overlay-source.c  input-overlay-source.h  plugin-main.c
